Rating wont crash if zero matches

--- a/mokstats/templates/rating.html
+++ b/mokstats/templates/rating.html
@@ -15,12 +15,14 @@
 	
 		<div data-role="content">
 			<p>Rating er en verdi som angir ferdighet på gitt tidspunkt og blir regnet ut på samme måte som <a href="http://en.wikipedia.org/wiki/Elo_rating_system">Elo rating</a>.</p>
-			<div>
-				<ul>
-					<li>Høyeste rating oppnådd er {{max.rating}} og ble først oppnådd av <a href="../players/{{max.pid}}/">{{max.pname}}</a> i <a href="../matches/{{max.mid}}/">denne</a> kampen.</li>
-					<li>Laveste rating oppnådd er {{min.rating}} og ble først oppnådd av <a href="../players/{{min.pid}}/">{{min.pname}}</a> i <a href="../matches/{{min.mid}}/">denne</a> kampen.</li>
-				</ul>
-			</div>
+			{% if max %}
+				<div>
+					<ul>
+						<li>Høyeste rating oppnådd er {{max.rating}} og ble først oppnådd av <a href="../players/{{max.pid}}/">{{max.pname}}</a> i <a href="../matches/{{max.mid}}/">denne</a> kampen.</li>
+						<li>Laveste rating oppnådd er {{min.rating}} og ble først oppnådd av <a href="../players/{{min.pid}}/">{{min.pname}}</a> i <a href="../matches/{{min.mid}}/">denne</a> kampen.</li>
+					</ul>
+				</div>
+			{% endif %}
 		</div>
 	</div>
 {% endblock %}
