Fixed: Can sort on match amount again

--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -29,8 +29,8 @@
 				    <li><a href="../players/{{p.id}}/" >
 				    	<span class="ui-li-count"><span class="rating">{{p.rating}}</span></span>
 				    	{{p.name}}
-				    	<span class="smaller"> - Won <span class="won">{{p.won}}
-				    	</span> of <span class="played">{{p.played}} </span>
+				    	<span class="smaller"> - Won <span class="won">{{p.won}}</span> of 
+				    	<span class="played">{{p.played}}</span> 
 				    	(<span class="winp">{{p.win_perc}}</span>%)</span>
 				    </a></li>
 				{% endfor %}
