Correct matches ordering

--- a/mokstats/templates/match.html
+++ b/mokstats/templates/match.html
@@ -20,8 +20,8 @@
 				<thead>
 					<tr>
 						<th></th>
-						<th title="Spa"><div class="center_outer"><span class="icon icon_spade center_inner"></span></div></th>
-						<th title="Dame"><div class="center_outer"><span class="icon icon_queen center_inner"></span></div></th>
+						<th title="Spar"><div class="center_outer"><span class="icon icon_spade center_inner"></span></div></th>
+						<th title="Damer"><div class="center_outer"><span class="icon icon_queen center_inner"></span></div></th>
 						<th title="Kabal: streker"><div class="center_outer"><span class="icon icon_solit_lines center_inner"></span></div></th>
 						<th title="Kabal: kort igjen"><div class="center_outer"><span class="icon icon_solit_cards center_inner"></span></div></th>
 						<th title="Pass"><div class="center_outer"><span class="icon icon_pass center_inner"></span></div></th>
