--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -22,7 +22,7 @@
 					<p>
 						<div>Spar er en runde der maximum/minimum kan oppnås, derfor representerer best/dårligst hvem som <b>først</b> fikk poengsummen. </div>
 						<ul>
-							<li>Dårligste runde: <a href="../players/{{spades.worst.pid}}/">{{spades.worst.pname}}</a> med {{spades.worst.sum}} poeng.</li>
+							<li>Dårligste <a href="../matches/{{spades.worst.mid}}/">runde</a>: <a href="../players/{{spades.worst.pid}}/">{{spades.worst.pname}}</a> med {{spades.worst.sum}} poeng.</li>
 							<li>Gjennomsnitt hvis man fikk spa(r): {{spades.average}} poeng.</li>
 						</ul>
 					</p>
@@ -33,7 +33,7 @@
 					<p>
 						<div>Damer er en runde der maximum/minimum kan oppnås, derfor representerer best/dårligst hvem som <b>først</b> fikk poengsummen. </div>
 						<ul>
-							<li>Dårligste runde: <a href="../players/{{queens.worst.pid}}/">{{queens.worst.pname}}</a> med {{queens.worst.sum}} poeng.</li>
+							<li>Dårligste <a href="../matches/{{queens.worst.mid}}/">runde</a>: <a href="../players/{{queens.worst.pid}}/">{{queens.worst.pname}}</a> med {{queens.worst.sum}} poeng.</li>
 							<li>Gjennomsnitt hvis man fikk dame(r): {{queens.average}} poeng.</li>
 						</ul>
 					</p>
@@ -43,9 +43,9 @@
 					<h3><span class="icon icon_solit_lines left"></span><span class="text left">Kabal</span></h3>
 					<p>
 						<ul>
-							<li>Høyeste antall strek i en runde: <a href="../players/{{solitaire_lines.worst.pid}}/">{{solitaire_lines.worst.pname}}</a> med {{solitaire_lines.worst.sum}} strek.</li>
+							<li>Høyeste antall strek i en <a href="../matches/{{solitaire_lines.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_lines.worst.pid}}/">{{solitaire_lines.worst.pname}}</a> med {{solitaire_lines.worst.sum}} strek.</li>
 							<li>Gjennomsnitt av antal strek hvis man fikk en eller flere: {{solitaire_lines.average}} strek.</li>
-							<li>Høyeste antall kort igjen i en runde: <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
+							<li>Høyeste antall kort igjen i en <a href="../matches/{{solitaire_cards.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
 							<li>Gjennomsnitt av antal kort hvis man satt igjen med et eller flere: {{solitaire_cards.average}} kort.</li>
 							<li>Dårligste <a href="../matches/{{solitaire_total.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng.</li>
 						</ul>
@@ -57,7 +57,7 @@
 					<p>
 						<div>Pass er en runde der maximum/minimum kan oppnås, derfor representerer best/dårligst hvem som <b>først</b> fikk poengsummen. </div>
 						<ul>
-							<li>Dårligste runde: <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} stikk.</li>
+							<li>Dårligste <a href="../matches/{{pass.worst.mid}}/">runde</a>: <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} stikk.</li>
 						</ul>
 					</p>
 				</div>
@@ -67,7 +67,7 @@
 					<p>
 						<div>Grand er en runde der maximum/minimum kan oppnås, derfor representerer best/dårligst hvem som <b>først</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde: <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med {{grand.best.sum}} stikk.</li>
+							<li>Beste <a href="../matches/{{grand.best.mid}}/">runde</a>: <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med {{grand.best.sum}} stikk.</li>
 						</ul>
 					</p>
 				</div>
@@ -77,7 +77,7 @@
 					<p>
 						<div>Trumf er en runde der maximum/minimum kan oppnås, derfor representerer best/dårligst hvem som <b>først</b> fikk poengsummen. </div>
 						<ul>
-							<li>Beste runde: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med {{trumph.best.sum}} stikk.</li>
+							<li>Beste <a href="../matches/{{trumph.best.mid}}/">runde</a>: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med {{trumph.best.sum}} stikk.</li>
 						</ul>
 					</p>
 				</div>
