Stats page with extreme stats types, and best/worst result page

--- a/mokstats/templates/match.html
+++ b/mokstats/templates/match.html
@@ -11,7 +11,7 @@
 		<div data-role="header">
 			<a href="../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
 			<a href="../" data-role="button" data-icon="back">Kamper</a>
-			<h1>{{ year }}, {{month}} | {{place}} </h1>
+			<h1>{{day}} {{month}} {{ year }} | {{place}} </h1>
 		</div>
 		
 	
