--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -14,8 +14,8 @@
 		<div data-role="content">
 			<a href="./players/" data-role="button">Spillere</a>
 			<a href="./matches/" data-role="button">Kamper</a>
-			<a href="./stats/" data-role="button">Runder</a>
 			<a href="./rating/" data-role="button">Rating</a>
+			<a href="./stats/" data-role="button">Diverse</a>
 		</div>
 	</div>
 {% endblock %}
