--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -8,7 +8,7 @@
 
 
 	<!-- Start of first page -->
-	<div data-role="page" id="player_page">
+	<div data-role="page" id="player_page" data-dom-cache="true">
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
