--- a/mokstats/templates/rating.html
+++ b/mokstats/templates/rating.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<!-- Start of first page -->
-	<div data-role="page" id="rating_page">
+	<div data-role="page" id="rating_page" data-dom-cache="true">
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
