Added rating description + cleanup in base

--- a/mokstats/templates/match.html
+++ b/mokstats/templates/match.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Enter{% endblock %} 
-{% block imports %}{% endblock %} 
+{% block title %}Kamp: {{day}} {{month}} {{ year }} | {{place}} {% endblock %} 
 
 {% block content %}
 
