--- a/mokstats/templates/matches.html
+++ b/mokstats/templates/matches.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Enter{% endblock %} 
-{% block imports %}{% endblock %} 
+{% block title %}Kamper{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
