--- a/mokstats/templates/stats-top-results.html
+++ b/mokstats/templates/stats-top-results.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Diverse{% endblock %} 
-{% block imports %}{% endblock %} 
+{% block title %}Sorterte Kampresultater{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
@@ -9,7 +8,7 @@
 	
 		<div data-role="header">
 			<a href="../../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
-			<h1>Beste kampresultater</h1>
+			<h1>Sorterte Kampresultater</h1>
 		</div>
 		
 	
