--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Enter{% endblock %} 
-{% block imports %}{% endblock %} 
+{% block title %}Møkkis Statistikk{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
