--- a/mokstats/templates/player.html
+++ b/mokstats/templates/player.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Enter{% endblock %}
-{% block imports %}{% endblock %} 
+{% block title %}Spiller: {{ name }}{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
