--- a/mokstats/templates/players.html
+++ b/mokstats/templates/players.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Enter{% endblock %} 
-{% block imports %}{% endblock %} 
+{% block title %}Spillere{% endblock %}
 
 {% block content %}
 
